# AudioNotes

./: README.md  client.py
app/: ConnectionManager.py  Dockerfile  app.py  db.py  docker-compose.yml  pyproject.toml  router.py
app/Controllers/: AudioNotesController.py
app/Models/: AudioNote.py
app/Schemas/: AudioNoteSchema.py
